--- a/Aier360/Base.lproj/Main.storyboard
+++ b/Aier360/Base.lproj/Main.storyboard
@@ -55,6 +55,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="h3I-vl-rIm" id="oAA-kM-F6T"/>
+                                </connections>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="head_default" translatesAutoresizingMaskIntoConstraints="NO" id="Ifg-QQ-C8d">
                                 <rect key="frame" x="249" y="20" width="103" height="91"/>
