--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -238,6 +238,9 @@
                                                 <color key="titleColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <segue destination="W2k-h0-BHg" kind="show" identifier="read" id="DmZ-Lf-de9"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
