--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -393,12 +393,77 @@
                     <view key="view" contentMode="scaleToFill" id="PLi-DO-VH1">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4b2-qU-yWy">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="RUj-kV-g14">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RUj-kV-g14" id="lSA-Zq-0hg">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="imageCell" id="EcJ-LT-01Q" customClass="ZXBaseCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EcJ-LT-01Q" id="b9V-IO-VvV">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dn5-8q-1lx">
+                                                    <rect key="frame" x="15" y="7" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="2tV-Si-fAZ"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Gg4-L4-B1P"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BsL-2I-Qcw">
+                                                    <rect key="frame" x="53" y="12" width="539" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="6IR-RU-Eaz"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Dn5-8q-1lx" firstAttribute="top" secondItem="b9V-IO-VvV" secondAttribute="topMargin" constant="-1" id="250-wP-7D3"/>
+                                                <constraint firstItem="Dn5-8q-1lx" firstAttribute="leading" secondItem="b9V-IO-VvV" secondAttribute="leadingMargin" constant="7" id="6MC-Qw-jD4"/>
+                                                <constraint firstItem="BsL-2I-Qcw" firstAttribute="top" secondItem="b9V-IO-VvV" secondAttribute="topMargin" constant="4" id="9TW-d7-Bgj"/>
+                                                <constraint firstItem="BsL-2I-Qcw" firstAttribute="leading" secondItem="Dn5-8q-1lx" secondAttribute="trailing" constant="8" id="cVE-hV-9EB"/>
+                                                <constraint firstItem="BsL-2I-Qcw" firstAttribute="trailing" secondItem="b9V-IO-VvV" secondAttribute="trailingMargin" id="oML-cc-G6e"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="logoImage" destination="Dn5-8q-1lx" id="dFP-0S-HdA"/>
+                                            <outlet property="titleLabel" destination="BsL-2I-Qcw" id="Enq-yj-J5c"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="W2k-h0-BHg" id="Lx6-Fa-BTM"/>
+                                    <outlet property="delegate" destination="W2k-h0-BHg" id="CiV-e8-FZD"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4b2-qU-yWy" firstAttribute="leading" secondItem="PLi-DO-VH1" secondAttribute="leadingMargin" constant="-16" id="6lF-GA-zgL"/>
+                            <constraint firstItem="4b2-qU-yWy" firstAttribute="top" secondItem="PLi-DO-VH1" secondAttribute="topMargin" id="Jd1-B8-XzC"/>
+                            <constraint firstItem="vVw-4T-YWB" firstAttribute="top" secondItem="4b2-qU-yWy" secondAttribute="bottom" id="iBn-03-oMf"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4b2-qU-yWy" secondAttribute="trailing" constant="-16" id="p4A-Z6-bNJ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="4b2-qU-yWy" id="4YB-5q-cmN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tVd-PK-zUC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="acN-aH-UcQ"/>
             </objects>
-            <point key="canvasLocation" x="2075" y="183"/>
+            <point key="canvasLocation" x="2075" y="182"/>
         </scene>
         <!--Add Announcement View Controller-->
         <scene sceneID="QvO-u8-Gl2">
