--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -134,6 +134,7 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="XAf-Yb-N7s" id="1MV-fD-Fpg"/>
+                        <segue destination="zvx-83-9ve" kind="show" identifier="add" id="Eaz-T7-h3V"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wvf-ah-nM6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -476,8 +477,149 @@
                     <view key="view" contentMode="scaleToFill" id="O0I-oq-bzt">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="GHL-26-g0f">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="GBb-jD-gjG">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="标题(必填)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ycB-a0-qQg">
+                                            <rect key="frame" x="8" y="8" width="584" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="lxU-L1-n7s"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="zvx-83-9ve" id="05Q-rQ-EN4"/>
+                                            </connections>
+                                        </textField>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已输入0字" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WnG-iq-aLz">
+                                            <rect key="frame" x="8" y="121" width="584" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="BDv-Ym-R3J"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zIv-U5-ZIe" customClass="UIPlaceHolderTextView">
+                                            <rect key="frame" x="0.0" y="38" width="600" height="83"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="83" id="w0n-Yk-WvG"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="zvx-83-9ve" id="0AG-Yr-IhV"/>
+                                            </connections>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="zIv-U5-ZIe" firstAttribute="top" secondItem="ycB-a0-qQg" secondAttribute="bottom" id="DrQ-cg-b1O"/>
+                                        <constraint firstAttribute="trailing" secondItem="WnG-iq-aLz" secondAttribute="trailing" constant="8" id="K44-9m-6RM"/>
+                                        <constraint firstItem="zIv-U5-ZIe" firstAttribute="leading" secondItem="GBb-jD-gjG" secondAttribute="leading" id="QAh-dc-Wpd"/>
+                                        <constraint firstItem="WnG-iq-aLz" firstAttribute="top" secondItem="zIv-U5-ZIe" secondAttribute="bottom" id="QWG-T8-ScF"/>
+                                        <constraint firstAttribute="trailing" secondItem="ycB-a0-qQg" secondAttribute="trailing" constant="8" id="a6L-7a-chS"/>
+                                        <constraint firstItem="ycB-a0-qQg" firstAttribute="top" secondItem="GBb-jD-gjG" secondAttribute="top" constant="8" id="fUM-Zc-ivE"/>
+                                        <constraint firstAttribute="bottom" secondItem="WnG-iq-aLz" secondAttribute="bottom" constant="8" id="ntG-QX-8C9"/>
+                                        <constraint firstAttribute="trailing" secondItem="zIv-U5-ZIe" secondAttribute="trailing" id="p1W-wA-hnW"/>
+                                        <constraint firstItem="ycB-a0-qQg" firstAttribute="leading" secondItem="GBb-jD-gjG" secondAttribute="leading" constant="8" id="rLy-uw-dvy"/>
+                                        <constraint firstItem="WnG-iq-aLz" firstAttribute="leading" secondItem="GBb-jD-gjG" secondAttribute="leading" constant="8" id="tlG-d7-D3h"/>
+                                    </constraints>
+                                </view>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="gCT-Ht-Jnw">
+                                    <rect key="frame" x="0.0" y="216" width="600" height="90"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RJ9-dJ-J7g">
+                                            <rect key="frame" x="15" y="8" width="16" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="22" id="3h4-XO-3X1"/>
+                                                <constraint firstAttribute="width" constant="16" id="XXC-c6-Ts6"/>
+                                            </constraints>
+                                            <state key="normal" image="checkmark_n">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <state key="selected" image="checkmark_s"/>
+                                            <connections>
+                                                <action selector="smsAction:" destination="zvx-83-9ve" eventType="touchUpInside" id="65M-mj-DRP"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="同时发送短信(剩余短信245条,本次需消耗15条。一条短信64字，超过64字将发送大于1条)" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iPM-8a-wa8">
+                                            <rect key="frame" x="39" y="8" width="553" height="34"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="553" id="ZQk-8B-F4f"/>
+                                                <constraint firstAttribute="height" priority="500" constant="22" id="g7l-jV-puW"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="ZQk-8B-F4f"/>
+                                                </mask>
+                                            </variation>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="RJ9-dJ-J7g" firstAttribute="top" secondItem="gCT-Ht-Jnw" secondAttribute="top" constant="8" id="IFi-Lo-bi2"/>
+                                        <constraint firstAttribute="trailing" secondItem="iPM-8a-wa8" secondAttribute="trailing" constant="8" id="gF9-Vb-ihu"/>
+                                        <constraint firstItem="RJ9-dJ-J7g" firstAttribute="leading" secondItem="gCT-Ht-Jnw" secondAttribute="leading" constant="15" id="htf-DU-92N"/>
+                                        <constraint firstItem="iPM-8a-wa8" firstAttribute="leading" secondItem="RJ9-dJ-J7g" secondAttribute="trailing" constant="8" id="kf8-ep-Q32"/>
+                                        <constraint firstItem="iPM-8a-wa8" firstAttribute="top" secondItem="gCT-Ht-Jnw" secondAttribute="top" constant="8" id="pzE-QA-ibM"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="DNO-EU-jdx" detailTextLabel="SBV-9s-NNX" style="IBUITableViewCellStyleValue1" id="jWN-sb-LbV">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jWN-sb-LbV" id="IVR-xn-yTp">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DNO-EU-jdx">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SBV-9s-NNX">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="zvx-83-9ve" id="X87-gR-59X"/>
+                                    <outlet property="delegate" destination="zvx-83-9ve" id="mfB-4Q-9es"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GHL-26-g0f" firstAttribute="leading" secondItem="O0I-oq-bzt" secondAttribute="leadingMargin" constant="-16" id="38b-gS-dDM"/>
+                            <constraint firstItem="7qa-zs-QKN" firstAttribute="top" secondItem="GHL-26-g0f" secondAttribute="bottom" id="WQT-EQ-SRs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GHL-26-g0f" secondAttribute="trailing" constant="-16" id="cdT-9a-yqK"/>
+                            <constraint firstItem="GHL-26-g0f" firstAttribute="top" secondItem="O0I-oq-bzt" secondAttribute="topMargin" id="uRK-Ta-7Kv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="contentTextView" destination="zIv-U5-ZIe" id="Fua-7i-pNB"/>
+                        <outlet property="letterNumLabel" destination="WnG-iq-aLz" id="lmZ-GB-pN3"/>
+                        <outlet property="smsButton" destination="RJ9-dJ-J7g" id="mqj-1s-Orb"/>
+                        <outlet property="tableView" destination="GHL-26-g0f" id="djr-jz-338"/>
+                        <outlet property="tipLabel" destination="iPM-8a-wa8" id="2Mq-Td-bbK"/>
+                        <outlet property="titleTextField" destination="ycB-a0-qQg" id="zPe-HB-nX0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iOG-IL-p81" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -485,6 +627,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="checkmark_n" width="16" height="16"/>
+        <image name="checkmark_s" width="16" height="16"/>
         <image name="ic__announcement_school" width="30" height="16"/>
         <image name="textField_breakline" width="320" height="1"/>
     </resources>
