--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -576,6 +576,63 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXImagePickCell" rowHeight="80" id="6dy-UT-Ohz" customClass="ZXImagePickCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6dy-UT-Ohz" id="Cds-ri-Hmy">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KdH-fw-qnO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cav-FQ-vT6">
+                                                        <size key="itemSize" width="50" height="50"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                    <cells>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="0fv-1Q-b73" customClass="ZXBaseCollectionViewCell">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E9S-PR-C9B">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                    </imageView>
+                                                                </subviews>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            </view>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailingMargin" secondItem="E9S-PR-C9B" secondAttribute="trailing" constant="-8" id="5wq-a4-YyV"/>
+                                                                <constraint firstAttribute="bottomMargin" secondItem="E9S-PR-C9B" secondAttribute="bottom" constant="-8" id="KH0-eE-76A"/>
+                                                                <constraint firstItem="E9S-PR-C9B" firstAttribute="leading" secondItem="0fv-1Q-b73" secondAttribute="leadingMargin" constant="-8" id="UeT-nr-gDi"/>
+                                                                <constraint firstItem="E9S-PR-C9B" firstAttribute="top" secondItem="0fv-1Q-b73" secondAttribute="topMargin" constant="-8" id="dCy-dS-9K8"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="imageView" destination="E9S-PR-C9B" id="AsS-WY-yi9"/>
+                                                            </connections>
+                                                        </collectionViewCell>
+                                                    </cells>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="6dy-UT-Ohz" id="E9j-Rk-ckS"/>
+                                                        <outlet property="delegate" destination="6dy-UT-Ohz" id="HsS-Lw-fac"/>
+                                                    </connections>
+                                                </collectionView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="KdH-fw-qnO" firstAttribute="leading" secondItem="Cds-ri-Hmy" secondAttribute="leadingMargin" constant="-8" id="1hX-TH-cdf"/>
+                                                <constraint firstItem="KdH-fw-qnO" firstAttribute="top" secondItem="Cds-ri-Hmy" secondAttribute="topMargin" constant="-8" id="CNh-vw-a1d"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="KdH-fw-qnO" secondAttribute="bottom" constant="-8" id="EUQ-yK-B6a"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="KdH-fw-qnO" secondAttribute="trailing" constant="-8" id="TLk-7X-FBD"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="collectionView" destination="KdH-fw-qnO" id="CSb-Hi-SYb"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="DNO-EU-jdx" detailTextLabel="SBV-9s-NNX" style="IBUITableViewCellStyleValue1" id="jWN-sb-LbV">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
